<resources>
    <string name="app_name">iBaax</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_assist_login">AssistLoginActivity</string>
    <string name="title_activity_main_page">Ibaax</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_fragment_home">FragmentHome</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_account_setting">AccountSettingActivity</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_agent_profile"></string>
    <string name="title_activity_post_profie_fragment">PostProfieFragment</string>
    <string name="title_activity_my_posted_properties_fragment">MyPostedPropertiesFragment</string>
    <string name="title_activity_my_settings_fragment">MySettingsFragment</string>
    <string name="title_activity_my_alert_fragment">MyAlertFragment</string>
    <string name="title_activity_my_short_list_fragment">MyShortListFragment</string>
    <string name="title_activity_find_an_agent">FindAnAgent</string>
    <string name="title_activity_search_for_rend_fragment">SearchForRendFragment</string>
    <string name="title_activity_marketplace">Marketplace</string>
    <string name="title_activity_property_detail">PropertyDetailActivity</string>
    <string name="title_activity_message">Contact Agent</string>
    <string name="title_activity_all_featured_propertyctivity">AllFeaturedPropertyctivity</string>
    <string name="title_activity_all_featured_agent">AllFeaturedAgentActivity</string>
    <string name="title_activity_all_developers">AllDevelopersActivity</string>
    <string name="title_activity_all_featured_brokerages">AllFeaturedBrokeragesActivity</string>
    <string name="title_activity_registration_success">RegistrationSuccessActivity</string>
    <string name="title_activity_agent_detail">Detail</string>
    <string name="title_activity_agent_spefialities">Spefialities</string>
    <string name="title_activity_agent_property_linsting">Property Listings</string>
    <string name="title_activity_agent_map_view">AgentMapViewActivity</string>
    <string name="facebook_app_id" translatable="false">850435015073918</string>
    <string name="title_activity_search_for_rent_sale_map">SearchForRentSaleMapActivity</string>
    <string name="title_activity_developer_profile">DeveloperProfileActivity</string>
    <string name="title_activity_brokerage_profile">BrokerageProfileActivity</string>
    <string name="title_activity_my_profile">My Profile</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="title_activity_property_detail2">PropertyDetailActivity2</string>
    <string name="action_delete">Deleted</string>
    <string name="add_property">Add Property</string>
    <string name="title_activity_tab_recently_viewed">Recently Viewed</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="sign_in_facebook">Login With Facebook</string>
    <string name="title_activity_tab_shorlist">My Shortlist</string>
    <string name="write_review">Write Review</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="dont_have_acc">Don\'t have an Account yet?</string>
    <string name="forgot_password">Forgot Your Password?</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="login">Login</string>
    <string name="sign_up">SIGNUP</string>
    <string name="enter_your_email">Enter your email address below to reset your password</string>
    <string name="submit">Submit</string>
    <string name="remember_pass">Remember password ?</string>
    <string name="filter">Filter</string>
    <string name="content.button.apply_filter">Apply Filter</string>
    <string name="list">List</string>
    <string name="accunt_exists">Already have an account?</string>
    <string name="sale">Sale</string>
    <string name="price_range">Price Range</string>
    <string name="rent">Rent</string>
    <string name="rent_type">Rent Type</string>
    <string name="available_from">Available From</string>
    <string name="select_date">Select Date</string>
    <string name="property_type">Property Types</string>
    <string name="beds">Beds</string>
    <string name="baths">Baths</string>
    <string name="build_size">Area Size</string>
    <string name="min_build_size">Min Area Size</string>
    <string name="max_build_size">Max Area Size</string>
    <string name="show_more">Show More</string>
    <string name="lot_plot_size">Lot/Plot Size</string>
    <string name="min_lot_size">Min Lot Size</string>
    <string name="max_lot_size">Max Lot Size</string>
    <string name="agent">Agent</string>
    <string name="developer">Developer</string>
    <string name="owner">Owner</string>
    <string name="brokerage">Brokerage</string>
    <string name="year_built">Year Built</string>
    <string name="posted_by">Posted By</string>
    <string name="amenities_specification"><![CDATA[Property Amenities & Specification]]></string>
    <string name="less">Less</string>
    <string name="rent_rate">Rent Rate</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="more_property_type">More Property Type</string>
    <string name="less_property_type">Less Property Type</string>
    <string name="reset">Reset</string>
    <string name="map">Map</string>
    <string name="message">Contact</string>
    <string name="sms">SMS</string>
    <string name="call">Call</string>
    <string name="content.title.description">Description</string>
    <string name="content.title.overview">Property Overview</string>
    <string name="content.title.specification">Specification</string>
    <string name="content.title.indoor">Indoor</string>
    <string name="content.title.outdoor">Outdoor</string>
    <string name="content.title.furnishing">Furnishing</string>
    <string name="content.title.parking">Parking</string>
    <string name="content.title.view">View</string>
    <string name="content.title.local_amneties">Local Amenities</string>
    <string name="content.title.location">Location</string>
    <string name="content.button.street_view">Street View</string>
    <string name="content.title.request_more_info">Request More Information</string>
    <string name="content.button.sort">Sort</string>
    <string name="content.warning.zoom_filter">Zoomed out too far. Please zoom in to see results.</string>
    <string name="content.text.contact_for_price">Contact For Price</string>
    <string name="content.text.loading">Loading&#8230;</string>
    <string name="content.label.directory">Directory</string>
    <string name="content.label.keywords">Keywords</string>
    <string name="content.hint.keyword">Agent Name, Company Name Or iBaax ID</string>
    <string name="content.label.specialities">Specialities</string>
    <string name="content.label.spoken_languages">Spoken Languages</string>
    <string name="content.label.service_area">Service Area</string>
    <string name="content.label.i_am">I am</string>
    <string name="title_activity_complete_profile">Step 1 of 4</string>
    <string name="content.button.get_started">Get Started</string>
    <string name="content.text.big_content">Please complete your profile, Agents with complete profiles have a higher chance of being selected by home buyers searching for properties, more visibility in search. Post your listing on iBaax within minutes with our easy upload system. Get real time leads from people interested in your listings, reporting of views, clicks and leads for all your listings and much more!</string>
    <string name="content.title.big_content_title">Thank you for choosing iBaax</string>
    <string name="content.image.logo">Logo</string>
    <string name="content.label.login_signup">Login/Signup</string>
    <string name="content.label.measurement">Measurement</string>
    <string name="content.label.currency">Currency</string>
    <string name="content.label.language">Language</string>
    <string name="content.switch.push_notification">Push Notification</string>
    <string name="content.button.termncondition"><![CDATA[Terms & Conditions]]></string>
    <string name="content.button.subscription">Subscription</string>
    <string name="content.button.change_password">Change Password</string>
    <string name="content.button.logout">Logout</string>
    <string name="content.label.profile_summery">Profile Summery</string>
    <string name="content.title.active_listing">Active Listing</string>
    <string name="content.label.view_more_active_listing">View More Active Listing</string>
    <string name="content.title.professional_info">Professional Information</string>
    <string name="content.title.contact_info">Contact Information</string>
    <string name="content.button.save_continue">Save &amp; Continue</string>
    <string name="content.label.video">Video</string>
    <string name="content.label.ratingsnreview"><![CDATA[Rating & Reviews]]></string>
    <string name="content.link.view_more_reviews">View More Reviews</string>
    <string name="content.button.next">Next</string>
    <string name="content.hint.input_address"><font size="12">Input Address&#8230;</font></string>
    <string name="content.error.invalid_email">Please enter valid email address.</string>
    <string name="content.error.invalid_phone">Please enter valid phone number.</string>
    <string name="MyProfileSetSpecialityActivity">Add Specialities</string>
    <string name="SaveVideoActivity">Upload Video</string>
    <string name="content.title.provide_your_video">Provide Your Youtube Video Link</string>
    <string name="content.button.upload">Upload</string>
    <string name="content.hint.youtube_link">Youtube Link</string>
    <string name="content.error.valid_link">Please Provide A Valid Youtube Link</string>
    <string name="content.title.company_info">Company Information</string>
    <string name="MyProfileSetServiceAreaActivity">Edit Service Area</string>
    <string name="content.menu.publish_status">Publish Status</string>
    <string name="MyPropertySaveVideo">Upload Video</string>
    <string name="content.label.filter_by">Filter By</string>
    <string name="Search_Property_For_Result_Activity">Property Filter</string>
    <string name="content.switch.for_sale">For Sale</string>
    <string name="content.switch.for_rent">For Rent</string>
    <string name="content.chkbox.type_residential">Residential(ALL)</string>
    <string name="content.chkbox.type_commercial">Commercial(ALL)</string>
    <string name="content.hint.search_keywords">Title, Agent or Agency</string>
    <string name="content.chk.has_photo">Has Photo</string>
    <string name="content.chk.has_video">Has Video</string>
    <string name="content.label.include">Include</string>
    <string name="content.button.save_search">Save Search</string>
    <string name="content.button.email">Email</string>
    <string name="content.radio.residentail">Residential</string>
    <string name="content.radio.commercial">Commercial</string>
    <string name="content.menu.rename">Rename</string>
    <string name="content.menu.delete">Delete</string>
    <string name="content.button.faq">FAQ</string>
</resources>