<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ibaax.com.ibaax.ResetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">


        <ImageView
            android:id="@+id/img_reset_cross"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackground"
            android:padding="5dp"
            android:src="@drawable/cancel" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_reset_logo"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/ibaax_logo_final" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/enter_your_email"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:typeface="sans" />

        <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/txt_reset_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:layout="@layout/custom_float_label" />

        <TextView
            android:id="@+id/validate_reset_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text=""
            android:textColor="#9aff0000"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_Sign_Up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/btn_lightblue"
            android:onClick="btnReset_click"
            android:text="@string/submit"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/remember_pass"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="15sp"
                android:typeface="sans" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:onClick="btnBackToLogin_click"
                android:padding="2dp"
                android:text="@string/login"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#45B8DB"
                android:textSize="15sp"
                android:typeface="sans" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>
